# yt-hear

./: .gitignore  ApiRest.md  README.md  faq.md  index.html  package.json  style.css  vite.config.js
.github/workflows/: README.md  ci.yml  lint.yml  release.yml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: plugin.json
src-tauri/src/: adblock.js  adblock_plugin.rs  bridge.rs  http_server.rs  main.rs  tray.rs  window.rs
src-tauri/src/scripts/: adblock.js  bridge.js  logger.js  mod.rs  server_control.js
src-tauri/src/scripts/providers/: controller.js  debug.js  observer.js  playerListeners.js  playerstate.js  queuecontroller.js  search.js  songinfo.js
src/core/: api.ts
