[package]
name = "tatar"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
serde_json = "1.0.132"
serde = { version = "1.0.214", features = ["derive"] }
tauri = { version = "2.1.0", features = ["tray-icon"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
url = "2.5.2"
adblock = "0.11.0"
ureq = { version = "2.10", features = ["json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
