[package]
name = "yt-hear"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0.132"
serde = { version = "1.0.214", features = ["derive"] }
tauri = { version = "2.9.2", features = ["tray-icon", "unstable"] }
tauri-plugin-shell = "2.1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
url = "2.5.2"
adblock = { version = "0.11.0", default-features = false, features = ["embedded-domain-resolver", "full-regex-handling"] }
ureq = { version = "2.10", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
